--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     width: 100%;
     color: rgb(255, 255, 255);
     position: relative;
+    overflow: hidden;
 }
 
 nav {
@@ -54,6 +55,7 @@ button {
     border: 0;
     outline: 0;
     cursor: pointer;
+    transition: background 1s, margin-left 1s ;
 }
 
 button span {
@@ -82,4 +84,65 @@ button span {
     transform: translateX(-50%);
     width: 700px;
     margin-left: -10px;
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+.text-container {
+    max-width: 600px;
+    margin-top: 7%;
+    margin-left: 50%;
+}
+
+.text-container h1 {
+    font-size: 80px;
+    font-weight: 400;
+}
+
+.text-container a {
+    text-decoration: none;
+    background: #00986f;
+    padding: 14px 40px;
+    display: inline-block;
+    color: #fff;
+    font-size: 18px;
+    margin-top: 30px;
+    border-radius: 30px;
+}
+
+.control {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-top: 150px;
+}
+
+.line {
+    width: 250px;
+    height: 4px;
+    background: #fff;
+    margin: 0 20px;
+    border-radius: 2px;
+}
+
+.line span {
+    width: 50%;
+    height: 8px;
+    margin-top: -2px;
+    border-radius: 4px;
+    background: #00986f;
+    display: block;
+}
+
+.active {
+    background: #008000;
+}
+
+.active span {
+    background: #fff;
+    margin-left: 31px;
+}
+
+.on {
+    opacity: 1;
 }
